# 2-uzduotis

./: CMakeLists.txt  Failas.cpp  Failas.h  Patikrinimas.cpp  Patikrinimas.h  README.md  Source.cpp  Studentas.cpp  Studentas.h  Uzklausos.cpp  V1.1.01.sln  V1.1.01.vcxproj  V1.2.03.sln  V1.2.03.vcxproj  V1.5.01.sln  V1.5.01.vcxproj  V2.0.2.sln  V2.0.2.vcxproj
doc/: index.html
