cmake_minimum_required(VERSION 3.20)

project("V1.5")

add_executable("${PROJECT_NAME}" "C:/Users/ugneo/c++ failai/V1.5/V1.5/Failas.cpp" "C:/Users/ugneo/c++ failai/V1.5/V1.5/Patikrinimas.cpp" "C:/Users/ugneo/c++ failai/V1.5/V1.5/Source.cpp" "C:/Users/ugneo/c++ failai/V1.5/V1.5/Studentas.cpp" "C:/Users/ugneo/c++ failai/V1.5/V1.5/Uzklausos.cpp") 