cmake_minimum_required(VERSION 3.20)

project("V1.2.03")

add_executable( "${PROJECT_NAME}" "C:/Users/ugneo/c++ failai/V1.2.03/V1.2.03/Failas.cpp" "C:/Users/ugneo/c++ failai/V1.2.03/V1.2.03/Patikrinimas.cpp" "C:/Users/ugneo/c++ failai/V1.2.03/V1.2.03/Source.cpp" "C:/Users/ugneo/c++ failai/V1.2.03/V1.2.03/Studentas.cpp" "C:/Users/ugneo/c++ failai/V1.2.03/V1.2.03/Uzklausos.cpp" 