cmake_minimum_required(VERSION 3.20)

project("V1.2.02")

add_executable( "${PROJECT_NAME}" "C:/Users/ugneo/c++ failai/V2.0.2/V2.0.2/Failas.cpp" "C:/Users/ugneo/c++ failai/V2.0.2/V2.0.2/Patikrinimas.cpp" "C:/Users/ugneo/c++ failai/V2.0.2/V2.0.2/Source.cpp" "C:/Users/ugneo/c++ failai/V2.0.2/V2.0.2/Studentas.cpp" "C:/Users/ugneo/c++ failai/V2.0.2/V2.0.2/Uzklausos.cpp") 